# waka-waka

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  lora.cpp  lv_conf.h  main.c  main.cpp  spi_main.cpp  waka-waka LinkServer Debug (1).launch  waka-waka LinkServer Debug.launch  waka-waka.mex
board/: board.c  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
component/lora_drv/: lora_drv.c  lora_drv.h
lora_drv/: lora_drv.c  lora_drv.h
middleware/: lv_conf.h
middleware/lvgl_lib/: CMakeLists.txt  terminus.c
simulator/: CMakeLists.txt  lora.cpp  lora_drv  lv_conf.h  lv_drivers  lv_drv_conf.h  lvgl  main.cpp  spi_main  spi_main.cpp  terminus.c
source/: ili9341_drv.c  ili9341_drv.h  utils.h  waka-waka.c  waka-waka.cpp  waka_conf.h
source/app/: lcd_app.c  lcd_app.h  lcd_flexspi.c  lcd_flexspi_edma.c  lcd_spi.c  logo.c  lora_app.c  lora_app.h  touch_spi.c  waka.c  waka.h  waka_input_msg.c  waka_input_msg.h  waka_model.h  waka_settings.c  waka_settings.h  waka_splash.c  waka_splash.h
source/app/lcd_drv/: lcd_flexspi.c  lcd_flexspi_edma.c  lcd_spi.c
source/app/lora_drv/: lora_drv.c  lora_drv.h
source/app/msg/: msg.c  msg.h  pb.h  waka_msg.h  waka_msg.options  waka_msg.pb.c  waka_msg.pb.h  waka_msg.proto  waka_pb.c  waka_pb.h
source/app/touch_drv/: touch_spi.c  touch_spi.h
source/app/trouch_drv/: touch_spi.c
startup/: startup_mimxrt1011.cpp
